--- a/Viva-challenge/Viva-challenge/Base.lproj/Main.storyboard
+++ b/Viva-challenge/Viva-challenge/Base.lproj/Main.storyboard
@@ -1,26 +1,177 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZVn-jl-RGP">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="xwy-9R-XAn">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController useStoryboardIdentifierAsRestorationIdentifier="YES" id="ZVn-jl-RGP" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ldp-bG-aeh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="h3V-YE-sgL">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="gT2-1y-hbK" kind="relationship" relationship="rootViewController" id="lw6-fj-gUt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mf1-aI-HT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1089" y="45"/>
+        </scene>
+        <!--Game View Controller-->
+        <scene sceneID="wWC-QT-L15">
+            <objects>
+                <viewController id="gT2-1y-hbK" customClass="GameViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="dT9-gE-y6s"/>
+                        <viewControllerLayoutGuide type="bottom" id="I8B-F1-cEj"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="785-Zk-Sni">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6Zt-1c-3j4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="THV-B3-PgY">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="wRM-HQ-8bw">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O7W-TL-xH9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="151"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SIC-Gw-NDd">
+                                                    <rect key="frame" x="54" y="162" width="46" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <size key="customSize" width="150" height="200"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="h4w-sz-G7t"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="orA-46-SYs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-351.19999999999999" y="44.527736131934034"/>
+        </scene>
+        <!--Game Detail View Controller-->
+        <scene sceneID="EQN-gl-oA5">
+            <objects>
+                <viewController id="zxb-87-qQ2" customClass="GameDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9FP-yo-rdC"/>
+                        <viewControllerLayoutGuide type="bottom" id="88V-ov-BeV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sOO-Gu-Gwr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m6S-hZ-EFC">
+                                <rect key="frame" x="16" y="28" width="343" height="398"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ze-OO-wlj">
+                                <rect key="frame" x="16" y="441" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="JQv-eG-h1i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Canais" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIT-ll-G2l">
+                                <rect key="frame" x="77" y="487" width="50" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="GwC-08-0gs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-television" translatesAutoresizingMaskIntoConstraints="NO" id="dQN-Wx-2z3">
+                                <rect key="frame" x="16" y="483" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="2UQ-Vh-wla"/>
+                                    <constraint firstAttribute="height" constant="32" id="AB4-cY-9Kk"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-visualizacoes" translatesAutoresizingMaskIntoConstraints="NO" id="IMh-Kr-zgP">
+                                <rect key="frame" x="151" y="483" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="7EQ-FD-vqV"/>
+                                    <constraint firstAttribute="height" constant="32" id="wZK-r6-ZiM"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visualizações" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aax-l5-QVd">
+                                <rect key="frame" x="197" y="487" width="104" height="19"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="104" id="FHP-sF-vnG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="88V-ov-BeV" firstAttribute="top" secondItem="dQN-Wx-2z3" secondAttribute="bottom" constant="152" id="1pR-7t-bgR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aax-l5-QVd" secondAttribute="trailing" constant="58" id="2NE-BI-IZz"/>
+                            <constraint firstItem="aax-l5-QVd" firstAttribute="top" secondItem="8ze-OO-wlj" secondAttribute="bottom" constant="25" id="2PE-Kc-B1e"/>
+                            <constraint firstItem="nIT-ll-G2l" firstAttribute="firstBaseline" secondItem="aax-l5-QVd" secondAttribute="baseline" id="2hA-z2-Rwz"/>
+                            <constraint firstItem="m6S-hZ-EFC" firstAttribute="top" secondItem="9FP-yo-rdC" secondAttribute="bottom" constant="8" id="Du9-AB-ZSg"/>
+                            <constraint firstItem="IMh-Kr-zgP" firstAttribute="top" secondItem="8ze-OO-wlj" secondAttribute="bottom" constant="21" id="Eee-Ke-zeu"/>
+                            <constraint firstItem="8ze-OO-wlj" firstAttribute="top" secondItem="m6S-hZ-EFC" secondAttribute="bottom" constant="15" id="TgR-5i-9so"/>
+                            <constraint firstItem="m6S-hZ-EFC" firstAttribute="leading" secondItem="sOO-Gu-Gwr" secondAttribute="leadingMargin" id="YJo-JC-7aP"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="dQN-Wx-2z3" secondAttribute="leading" id="dpa-z1-TwT"/>
+                            <constraint firstItem="aax-l5-QVd" firstAttribute="leading" secondItem="IMh-Kr-zgP" secondAttribute="trailing" constant="14" id="eum-Z3-4Cf"/>
+                            <constraint firstItem="m6S-hZ-EFC" firstAttribute="trailing" secondItem="sOO-Gu-Gwr" secondAttribute="trailingMargin" id="fot-5j-2XY"/>
+                            <constraint firstItem="8ze-OO-wlj" firstAttribute="leading" secondItem="sOO-Gu-Gwr" secondAttribute="leading" constant="16" id="oPp-xV-Yfw"/>
+                            <constraint firstItem="IMh-Kr-zgP" firstAttribute="leading" secondItem="nIT-ll-G2l" secondAttribute="trailing" constant="24" id="pOy-JR-dZb"/>
+                            <constraint firstItem="IMh-Kr-zgP" firstAttribute="top" secondItem="dQN-Wx-2z3" secondAttribute="top" id="wZ6-ca-KhU"/>
+                            <constraint firstAttribute="trailing" secondItem="8ze-OO-wlj" secondAttribute="trailing" constant="16" id="wki-Ci-9ZC"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LWk-X1-ysL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="376.80000000000001" y="44.527736131934034"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic-television" width="32" height="32"/>
+        <image name="ic-visualizacoes" width="32" height="32"/>
+    </resources>
 </document>
