Adiciona serviço de request e ajustes de pullrefresh no ViewController

--- a/Viva-challenge/Viva-challenge/Base.lproj/Main.storyboard
+++ b/Viva-challenge/Viva-challenge/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="wRM-HQ-8bw">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="wRM-HQ-8bw" customClass="GameCell" customModule="Viva_challenge" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -76,6 +76,10 @@
                                             </subviews>
                                         </view>
                                         <size key="customSize" width="150" height="200"/>
+                                        <connections>
+                                            <outlet property="gameImage" destination="O7W-TL-xH9" id="ouJ-eq-jnP"/>
+                                            <outlet property="gameTitle" destination="SIC-Gw-NDd" id="Xrg-Gr-Ibb"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -83,6 +87,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="h4w-sz-G7t"/>
+                    <connections>
+                        <outlet property="gameCollectionView" destination="6Zt-1c-3j4" id="4Hw-Ii-p2G"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="orA-46-SYs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -91,7 +98,7 @@
         <!--Game Detail View Controller-->
         <scene sceneID="EQN-gl-oA5">
             <objects>
-                <viewController id="zxb-87-qQ2" customClass="GameDetailViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GameDetailViewController" id="zxb-87-qQ2" customClass="GameDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9FP-yo-rdC"/>
                         <viewControllerLayoutGuide type="bottom" id="88V-ov-BeV"/>
